force-app/main/default/objects/Standard_Covered__c/Standard_Covered__c.object-meta.xml
<CustomObject>
    <label>Standard Covered</label>
    <nameField>
        <displayFormat>SC-{0000000}</displayFormat>
        <label>Standard Covered Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standard Covered</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>