force-app/main/default/objects/Standard_Covered__c/fields/External_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Record_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Record Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>