force-app/main/default/objects/Standard_Covered__c/fields/External_Standard_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Standard_Id__c</fullName>
    <description>This field is a part of snm and use in sf to sf sync</description>
    <formula>Standard__r.External_Record_Id__c</formula>
    <label>External Standard Id</label>
    <type>Text</type>
</CustomField>