force-app/main/default/objects/Standard_Covered__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Standard Covered</relationshipLabel>
    <relationshipName>Standard_Covered</relationshipName>
    <type>Lookup</type>
</CustomField>