force-app/main/default/objects/Standard_Covered__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Standard Covered</relationshipLabel>
    <relationshipName>Standard_Covered</relationshipName>
    <type>Lookup</type>
</CustomField>