force-app/main/default/objects/Standard_Covered__c/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Standard__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Standard__c</referenceTo>
    <relationshipLabel>Standard Covered</relationshipLabel>
    <relationshipName>Standard_Covered</relationshipName>
    <type>Lookup</type>
</CustomField>