force-app/main/default/objects/Standard_Covered__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>Standard__r.Title__c</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>